--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 
 :root {
     --verde-claro: #90EE90;
-    --alto-contraste-fundo: #000000;
+    --alto-contraste-fundo: #A020F0;
     --alto-contraste-texto: #ffffff;
     --alto-contraste-link: #ffd700;
 }
